# ai_scambaiter

./: README.md  config.ini.tmpl  pyproject.toml
ai_scambaiter/: __init__.py  agent.py  bot_runner.py  chatgpt_interface.py  container.py  controller.py  conversation_stream_generator.py  main.py  telegram_interface.py
ai_scambaiter/mocks/: chatgpt_interface_mock.py  scam_generator.py  telegram_interface_mock.py
